package org.example.interfaces

interface Comparator {
    fun compare(o1: Any?, o2: Any?): Int
}

