package org.example.interfaces

fun interface DoWith {
    fun doWith(obj: Any?)
}

