package org.example.interfaces

fun interface TestIt {
    fun testIt(obj: Any?): Boolean
}

